src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>BusinessTypeList__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Type List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CampaignPriority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Campaign ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag_Category__c</fullName>
        <label>Flag Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flag Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Set_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flag Set By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Flag_Set_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flag_Set_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flag Set On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IndustryList__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Industry List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Business_Group__c</fullName>
        <label>Lead Business Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CNS</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>CX</fullName>
                </value>
                <value>
                    <fullName>Nokia Corp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Business_Line__c</fullName>
        <label>Lead Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FN - 7360 Cable (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - AMS (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - Care (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - Copper (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - DH - ONT (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - FIBER (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - FastMile (incl. LTE &amp; 5G) (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - Gainspeed (incl SF-4X) (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - Nokia Corp FN (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - Professional Services (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - Wireless PON (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - Connectivity Platform as a Serv (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - Deploy Build, Turnkey &amp; Modern (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - NCS Cognitive Services (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - NCS Network Performance Svcs (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - Nokia Corp GS (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - Operate &amp; Manage - Innovation (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - Operate &amp; Manage - Traditional (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - Services Integration and Testing (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - TSS Hardware Services (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Rtg - IP (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Rtg - Nuage (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Rtg Care Services (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Rtg Deepfield Ntwk Intlg (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Rtg Mobile Packet Core (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Rtg NSM (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Video (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - Nokia Corp ION (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - Optics Network Management (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - Optics Optical M.S. Networks (BL)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Business_Unit__c</fullName>
        <label>Lead Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5G</fullName>
                </value>
                <value>
                    <fullName>BroadBand Access</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Cloud Core</fullName>
                </value>
                <value>
                    <fullName>Cloud Core Services</fullName>
                </value>
                <value>
                    <fullName>Connectivity Platform as a Serv</fullName>
                </value>
                <value>
                    <fullName>Deploy Services</fullName>
                </value>
                <value>
                    <fullName>Digital Experience</fullName>
                </value>
                <value>
                    <fullName>Digital Home</fullName>
                </value>
                <value>
                    <fullName>Digital Networks</fullName>
                </value>
                <value>
                    <fullName>Digital Operations</fullName>
                </value>
                <value>
                    <fullName>Emerging Products</fullName>
                </value>
                <value>
                    <fullName>FN Common</fullName>
                </value>
                <value>
                    <fullName>Fixed Wireless Access</fullName>
                </value>
                <value>
                    <fullName>GS Common</fullName>
                </value>
                <value>
                    <fullName>HetRAN</fullName>
                </value>
                <value>
                    <fullName>HetRAN mature</fullName>
                </value>
                <value>
                    <fullName>ION Common</fullName>
                </value>
                <value>
                    <fullName>IP Routing</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>LTE</fullName>
                </value>
                <value>
                    <fullName>MN Common</fullName>
                </value>
                <value>
                    <fullName>Management Solutions</fullName>
                </value>
                <value>
                    <fullName>Microwave</fullName>
                </value>
                <value>
                    <fullName>Network Cognitive Services</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
                <value>
                    <fullName>Nokia Corporation</fullName>
                </value>
                <value>
                    <fullName>Nokia Technologies</fullName>
                </value>
                <value>
                    <fullName>Operate &amp; Managed Services</fullName>
                </value>
                <value>
                    <fullName>Optics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Back_Dated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back-Dated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Attribution__c</fullName>
        <label>LD LT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Bookings_Attribution__c</fullName>
        <label>LD LT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Generated_Attribution__c</fullName>
        <label>LD LT Generated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Generated_Bookings_Attribution__c</fullName>
        <label>LD LT Generated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Accelerated_Attribution__c</fullName>
        <label>LD MT Accelerated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Accelerated_Bookings_Attr__c</fullName>
        <label>LD MT Accelerated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Generated_Attribution__c</fullName>
        <label>LD MT Generated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Generated_Bookings_Attribution__c</fullName>
        <label>LD MT Generated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Average_Days_To_Close__c</fullName>
        <label>Reporting Average Days to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Bookings_Attribution__c</fullName>
        <label>LD MT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Campaign_Member_Totals__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reporting CM Totals (Deprecated)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Cost__c</fullName>
        <label>Reporting Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_FT_Attribution_Amount__c</fullName>
        <label>LD FT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_FT_Bookings_Attribution__c</fullName>
        <label>LD FT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Lift__c</fullName>
        <label>Reporting Lift (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_MT_Attribution_Amount__c</fullName>
        <label>LD MT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Num_Target_Campaign_Members__c</fullName>
        <label>Reporting Num Target CM (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Campaign_Members__c</fullName>
        <label>Reporting Num CM (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Opportunities__c</fullName>
        <label>Reporting Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Touches__c</fullName>
        <label>Reporting Number of Touches</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_On_Target__c</fullName>
        <label>Reporting On-Target (Deprecated)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Opportunity_Close_Rate__c</fullName>
        <label>Reporting Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MCASegment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MCA Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Campaign Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaigns (Marketing Campaign Opportunity)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterCampaign__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Master Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_CST__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name (CST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Flags__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will filter our Program Flags Campaigns</description>
        <label>Program Flags</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Program Flags</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_code__c</fullName>
        <description>Req 925. Create a text field on Campaign Standard object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryBusinessGroupList__c</fullName>
        <label>Secondary Business Group List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CNS</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>CX</fullName>
                </value>
                <value>
                    <fullName>Nokia Corp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryBusinessLineList__c</fullName>
        <label>Secondary Business Line List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FN - 7360 Cable (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - AMS (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - Copper (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Rtg Mobile Packet Core (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - FIBER (BL)</fullName>
                </value>
                <value>
                    <fullName>NSW - Cloud IMS (BL)</fullName>
                </value>
                <value>
                    <fullName>MN - 5G (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - DH - ONT (BL)</fullName>
                </value>
                <value>
                    <fullName>FN - Nokia Corp FN (BL)</fullName>
                </value>
                <value>
                    <fullName>GCCF - Corporate Strategy and Development (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - Deploy Build, Turnkey &amp; Modern (BL)</fullName>
                </value>
                <value>
                    <fullName>NSW - Cloud Core Services (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Rtg - IP (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - TSS Software Services (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - NCS Cognitive Services (BL)</fullName>
                </value>
                <value>
                    <fullName>NSW - PS DX Customer Care (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - NCS Network Performance Svcs (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - Deploy Planning &amp; Design (BL)</fullName>
                </value>
                <value>
                    <fullName>MN - TD LTE (BL)</fullName>
                </value>
                <value>
                    <fullName>MN - FDD LTE (BL)</fullName>
                </value>
                <value>
                    <fullName>MN - Legacy (BL)</fullName>
                </value>
                <value>
                    <fullName>MN - PS and Vertical Solutions (BL)</fullName>
                </value>
                <value>
                    <fullName>GS - Nokia Corp GS (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Rtg NSM (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - IP Rtg Deepfield Ntwk Intlg (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - Optics Network Management (BL)</fullName>
                </value>
                <value>
                    <fullName>ION - Optics Switched WDM (BL)</fullName>
                </value>
                <value>
                    <fullName>NSW - DI Network Insights (BL)</fullName>
                </value>
                <value>
                    <fullName>NSW - Security (BL)</fullName>
                </value>
                <value>
                    <fullName>NE - IoT (BL)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryBusinessUnitList__c</fullName>
        <label>Secondary Business Unit List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2G/3G</fullName>
                </value>
                <value>
                    <fullName>IP Routing</fullName>
                </value>
                <value>
                    <fullName>Radio Networks</fullName>
                </value>
                <value>
                    <fullName>BroadBand Access</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Cloud Core</fullName>
                </value>
                <value>
                    <fullName>Corporate Strategy and Development</fullName>
                </value>
                <value>
                    <fullName>Deploy Services</fullName>
                </value>
                <value>
                    <fullName>Cloud Core Services</fullName>
                </value>
                <value>
                    <fullName>Technical Support Services</fullName>
                </value>
                <value>
                    <fullName>Digital Experience</fullName>
                </value>
                <value>
                    <fullName>Digital Home</fullName>
                </value>
                <value>
                    <fullName>Digital Networks</fullName>
                </value>
                <value>
                    <fullName>Emerging Products</fullName>
                </value>
                <value>
                    <fullName>LTE</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>FN Common</fullName>
                </value>
                <value>
                    <fullName>GS Common</fullName>
                </value>
                <value>
                    <fullName>HetRAN</fullName>
                </value>
                <value>
                    <fullName>ION Common</fullName>
                </value>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>MN Common</fullName>
                </value>
                <value>
                    <fullName>Management Solutions</fullName>
                </value>
                <value>
                    <fullName>Microwave</fullName>
                </value>
                <value>
                    <fullName>Network Cognitive Services</fullName>
                </value>
                <value>
                    <fullName>Services SW</fullName>
                </value>
                <value>
                    <fullName>Nokia Corporation</fullName>
                </value>
                <value>
                    <fullName>SW Common</fullName>
                </value>
                <value>
                    <fullName>Small Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryMCASegment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary MCA Segment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Store_Summary__c</fullName>
        <description>Campaign member roll-up to parent level</description>
        <label>Total Campaign Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_ID__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>MWC</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Campaign_Search</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
            <value>17.NokCorp.Partner.All.L.G.W.2882.PUtP</value>
        </filters>
        <label>Campaign Search</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <columns>CAMPAIGN.TOT_CONTACTS</columns>
        <columns>CAMPAIGN.TOT_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>X17_BBAccess_FTTx_none_L_N_N_12814_FTTx_c1</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
            <value>17.BBAccess.FTTx.none.L.N.N.12814.FTTx campaign for US regionals</value>
        </filters>
        <label>17.BBAccess.FTTx.none.L.N.N.12814.FTTx c</label>
    </listViews>
    <recordTypes>
        <fullName>Marketing_Campaign</fullName>
        <active>true</active>
        <label>Marketing Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Flags</fullName>
        <active>true</active>
        <description>This record type is created for Program Flags tracking on Opportunity</description>
        <label>Program Flags</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>